<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>Tweedeo</groupId>
	<artifactId>Tweedeo</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		<!-- Convenience property to set the GWT version -->
		<gwtVersion>2.4.0</gwtVersion>
		<!-- GWT needs at least java 1.5 -->
		<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<profiles>
		<profile>
			<id>strict</id>
			<properties>
				<maven.test.failure.ignore>false</maven.test.failure.ignore>
			</properties>
		</profile>
		<!-- jboss.org config start -->
		<profile>
			<id>jboss-public-repository</id>
			<repositories>
				<repository>
					<id>jboss-public-repository-group</id>
					<name>JBoss Public Maven Repository Group</name>
					<url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
					<layout>default</layout>
					<releases>
						<enabled>true</enabled>
						<updatePolicy>never</updatePolicy>
					</releases>
					<snapshots>
						<enabled>true</enabled>
						<updatePolicy>never</updatePolicy>
					</snapshots>
				</repository>
<!-- 					<repository>
						<id>gwtprojsonserializer</id>
						<url>http://gwtprojsonserializer.googlecode.com/svn/repo</url>
					</repository> -->
				</repositories>
			<pluginRepositories>
				<pluginRepository>
					<id>jboss-public-repository-group</id>
					<name>JBoss Public Maven Repository Group</name>
					<url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
					<layout>default</layout>
					<releases>
						<enabled>true</enabled>
						<updatePolicy>never</updatePolicy>
					</releases>
					<snapshots>
						<enabled>true</enabled>
						<updatePolicy>never</updatePolicy>
					</snapshots>
				</pluginRepository>
			</pluginRepositories>
		</profile>
	</profiles>
	<dependencies>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-servlet</artifactId>
			<version>2.4.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/lib/gwt-servlet-deps.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<version>2.4.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.7</version>
			<scope>test</scope>
		</dependency>
<!-- 		<dependency>
			<groupId>com.kfuntak.gwt.json</groupId>
			<artifactId>gwtprojsonserializer</artifactId>
			<version>1.0.4</version>
		</dependency>
 -->
 	</dependencies>
	<build>
		<!-- Generate compiled stuff in the folder used for developing mode -->
		<outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>2.4.0</version>
				<configuration>
					<!-- <compileTargets> <value>com.biplav.tweedeo.Tweedeo</value> </compileTargets> -->
					<module>com.biplav.tweedeo.Tweedeo</module>
					<extraJvmArgs>-XX:+UseConcMarkSweepGC -XX:MaxPermSize=256m -Xmx512m</extraJvmArgs>
					<runTarget>Tweedeo.html</runTarget>
					<style>DETAILED</style>
                    <noServer>false</noServer>
					<hostedWebapp>${webappDirectory}</hostedWebapp>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
							<!-- <goal>generateAsync</goal> -->
							<!-- <goal>test</goal> -->
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Copy static web files before executing gwt:run -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.1.1</version>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>exploded</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<webappDirectory>${webappDirectory}</webappDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<name>Tweedeo</name>
</project>